<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:title="Logout" android:id="@+id/menuLogout"/>
    <item android:title="Dashboard" android:id="@+id/menuDashboard"/>
<!--    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="always"
        android:tooltipText="Address"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:title="Search"/>-->

</menu>